--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <canvas width="600" height="400" id="cvGame"></canvas>
     </div>
-    <script src="./rect.js" type="application/javascript"></script>
+    <script src="./blob.js" type="application/javascript"></script>
     <script src="./game.js" type="application/javascript"></script>
 </body>
 </html>
