--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <canvas width="600" height="400" id="cvGame"></canvas>
+        <canvas width="1200" height="400" id="cvGame"></canvas>
     </div>
-    <script src="./blob.js" type="application/javascript"></script>
+    <script src="./platform.js" type="application/javascript"></script>
+    <script src="./rect.js" type="application/javascript"></script>
     <script src="./game.js" type="application/javascript"></script>
 </body>
 </html>
