--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <canvas width="1200" height="400" id="cvGame"></canvas>
     </div>
     <script src="./platform.js" type="application/javascript"></script>
-    <script src="./rect.js" type="application/javascript"></script>
+    <script src="./blob.js" type="application/javascript"></script>
     <script src="./game.js" type="application/javascript"></script>
 </body>
 </html>
